--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,47 @@
     android:layout_height="match_parent"
     tools:context="lanb.t1.MainActivity"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="中文→日本语"
+            android:layout_weight="1"
+            android:shadowColor="#080808"
+            />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/etText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Text"/>
-    <Button
-        android:id="@+id/bBroad"
+        android:hint="请输入待翻译文本\n\n\n\n"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="播放"/>
-    <Button
-        android:id="@+id/bSpeech"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="语音识别"/>
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/bBroad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:layout_weight="1"
+            android:text="播放文本"/>
+        <Button
+            android:id="@+id/bSpeech"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:layout_weight="1"
+            android:text="语音输入"/>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/btrans"
         android:layout_width="match_parent"
@@ -34,13 +57,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
         <TextView
             android:id="@+id/TextView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="翻译"
             android:textSize="20dp"/>
     </ScrollView>
+
 
 </LinearLayout>
