--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="lanb.t1.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#27b4a582">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/srcT"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="中文→日本语"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:gravity="center"
             android:shadowColor="#080808"
-            />
+            android:text="中文" />
+
+        <Button
+            android:id="@+id/bT"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/trans"
+            android:onClick="onClick"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/tgtT"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:shadowColor="#080808"
+            android:text="日本语" />
     </LinearLayout>
 
     <EditText
